--- a/src/app/modules/shared/components/sidenav/sidenav.component.html
+++ b/src/app/modules/shared/components/sidenav/sidenav.component.html
@@ -17,8 +17,10 @@
             <mat-icon>person_outline</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <mat-icon>exit_to_app</mat-icon>
-            Cerrar Sesion
+            <button mat-menu-item (click)="logout()">
+              <mat-icon>exit_to_app</mat-icon>
+              Cerrar Sesion
+            </button>
           </mat-menu>
         </li>
       </ul>
@@ -33,8 +35,7 @@
         <!--profile-->
         <div class="profile-card">
           <div class="header">
-            <h2>Rony Cuenca</h2>
-            <h4>JRony.Cr@gmail.com</h4>
+            <h2>{{username}}</h2>
           </div>
         </div>
         <mat-divider></mat-divider>
