--- a/src/app/modules/dashboard/components/home/home.component.html
+++ b/src/app/modules/dashboard/components/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="grafico">
+  <p>Bienvenidos</p>
+  <!--CHART DOUGHNUT-->
+  <div class="chartContainer">
+    <canvas id="canvas-doughnut" width="400" height="400">
+      {{chartDoughnut}}
+    </canvas>
+  </div>
+
+  <!--CHART BAR-->
+  <div class="chartContainer">
+    <canvas id="canvas-bar" width="400" height="400">
+      {{chartBar}}
+    </canvas>
+  </div>
+</div>
